--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>javascript course</title>
     <link rel="stylesheet" href="style.css">
-    <script src="js/32.js"></script>
+    <script src="33.js"></script>
 
 </head>
 
