--- a/html_files/34.html
+++ b/html_files/34.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="js_files/34.js"></script>
+    <script src="/js_files/34.js"></script>
+    <link rel="stylesheet" href="/css_file/style.css">
 </head>
 
 <body>
@@ -16,6 +17,11 @@
             <li>HIRE ME</li>
         </ul>
     </nav>
+
+
+    <div class="container">Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus, magnam!</div>
+
+ 
 </body>
 
 </html>
