--- a/html_files/34.html
+++ b/html_files/34.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>portfolio</title>
     <script src="/js_files/34.js"></script>
-    <link rel="stylesheet" href="/css_file/style.css">
+    <link rel="stylesheet" href="/css_file/34.css">
 </head>
 
 <body>
@@ -21,7 +21,7 @@
 
     <div class="container">Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus, magnam!</div>
 
- 
+
 </body>
 
 </html>
