--- a/html_files/35.html
+++ b/html_files/35.html
@@ -17,6 +17,7 @@
     <div class="container">
         <table class="table">
             <thead>
+                <caption>Table of lagends</caption>
                 <tr>
                     <th scope="col">#</th>
                     <th scope="col">First</th>
