--- a/html_files/38.html
+++ b/html_files/38.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>practice set ch-7</title>
+    <link rel="stylesheet" href="/css_file/38.CSS">
 </head>
+
 <body>
-    
+    <nav>
+        <li>HOME</li>
+        <li>ABOUT</li>
+        <li>BLOG</li>
+        <li>CONTACT</li>
+    </nav>
+
+
+    <script src="/js_files/38.js"></script>
 </body>
+
 </html>
