--- a/html_files/38.html
+++ b/html_files/38.html
@@ -9,12 +9,23 @@
 </head>
 
 <body>
+
+    <!-- prob-1 -->
     <nav>
         <li>HOME</li>
         <li>ABOUT</li>
         <li>BLOG</li>
         <li>CONTACT</li>
     </nav>
+
+    <!-- prob -2 -->
+    <table>
+        <tr>hey1</tr>
+        <tr>hey2</tr>
+        <tr>hey3</tr>
+        <tr>hey4</tr>
+    </table>
+
 
 
     <script src="/js_files/38.js"></script>
