--- a/exercise/Ex-1 Hackerman/Index.html
+++ b/exercise/Ex-1 Hackerman/Index.html
@@ -6,10 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Lato:wght@700&family=Poppins:wght@400;500;700&display=swap');
+    </style>
 </head>
 
 <body>
-<div class="" id="text"></div>
+    <div id="text"> </div>
+
+
     <script src="script.js"></script>
 </body>
 
