--- a/Dom manipulation/Index.html
+++ b/Dom manipulation/Index.html
@@ -10,8 +10,8 @@
 
 <body>
 
-    <dvi class="container">
-        <div class="box" id="box1">box1</div>
+    <dvi class="container" id="c1">
+        <div class="box round-border" id="box1">box1</div>
         <div class="box" id="box2">box2</div>
         <div class="box" id="box3">box3</div>
         <div class="box" id="box4">box4</div>
